--- a/xxx.css
+++ b/xxx.css
@@ -1,9 +1,17 @@
 body {
-	background-color: blue;
+	background-image: url("gif.gif");
 }
 
 h1 {
 	color: white;
 	text-align: center;
 	font-family: verdana;
+	font-style: italic;
+}
+
+p {
+	color: white;
+	text-align: center;
+	font-family: verdana;
+	font-style: italic;
 }
